Name:          bson
Version:       0.3.2
Synopsis:      BSON documents are JSON-like objects with a standard binary
               encoding.
Description:   A BSON Document is an untyped (dynamically type-checked) record.
               I.e. it is a list of name-value pairs, where a Value is a single
               sum type with constructors for basic types (Bool, Int, Float,
               String, and Time), compound types (List, and (embedded) Document),
               and special types (Binary, Javascript, ObjectId, RegEx, and a few
               others).

	           A BSON Document is serialized to a standard binary encoding
               defined at <http://bsonspec.org>. This implements version 1 of
               that spec.
Category:      Data
Homepage:      http://github.com/mongodb-haskell/bson
Author:        Tony Hannan
Maintainer:    Fedor Gogolev <knsd@knsd.net>, Greg Weber <greg@gregweber.info>
Copyright:     Copyright (c) 2010-2012 10gen Inc.
License:       OtherLicense
License-file:  LICENSE
Cabal-version: >= 1.10
Build-type:    Simple
Extra-Source-Files: CHANGELOG.md

Library
  Build-depends:      base 
                    , time
                    , bytestring
                    , binary 
                    , cryptohash
                    , data-binary-ieee754
                    , mtl 
                    , network
                    , text 

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns, CPP

  Exposed-modules:  Data.Bson,
                    Data.Bson.Binary

  GHC-prof-options: -auto-all

Test-suite bson-tests
  Type:             exitcode-stdio-1.0
  Hs-source-dirs:   tests .
  Main-is:          Tests.hs
  Other-modules:    Data.Bson.Binary.Tests
                    Data.Bson.Tests
  Ghc-options:      -Wall -fno-warn-orphans

  Build-depends:      test-framework        
                    , test-framework-quickcheck2 
                    , QuickCheck         
                    -- Copied from regular dependencies...
                    , base 
                    , time
                    , bytestring
                    , binary
                    , cryptohash
                    , data-binary-ieee754
                    , mtl 
                    , network
                    , text 
  Default-Language: Haskell2010
  Default-Extensions: CPP
